--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Runner.TestRunner2" hash-for-method="login(check the user details)">login(check the user details)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Runner.TestRunner3" hash-for-method="login(To assign leave to an employee)">login(To assign leave to an employee)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Runner.TestRunner1" hash-for-method="login(check the user details)">login(check the user details)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Runner.TestRunner2" hash-for-method="login(check the  complete details of user)">login(check the  complete details of user)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -117,7 +117,7 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Runner.TestRunner3" hash-for-method="login(check the user details)">login(check the user details)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Runner.TestRunner1" hash-for-method="login(check the system user details)">login(check the system user details)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -158,10 +158,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login(check the user details)">
-                  </a> <!-- login(check the user details) -->
+                  <a name="login(To assign leave to an employee)">
+                  </a> <!-- login(To assign leave to an employee) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(check the user details)</span>
+                  <span class="parameters">(To assign leave to an employee)</span>
                   <em>
 (leave)                  </em>
                 </div> <!-- method-content -->
@@ -176,10 +176,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login(check the user details)">
-                  </a> <!-- login(check the user details) -->
+                  <a name="login(check the system user details)">
+                  </a> <!-- login(check the system user details) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(check the user details)</span>
+                  <span class="parameters">(check the system user details)</span>
                   <em>
 (search)                  </em>
                 </div> <!-- method-content -->
@@ -194,12 +194,12 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login(check the user details)">
-                  </a> <!-- login(check the user details) -->
+                  <a name="login(check the  complete details of user)">
+                  </a> <!-- login(check the  complete details of user) -->
                   <span class="method-name">login</span>
-                  <span class="parameters">(check the user details)</span>
+                  <span class="parameters">(check the  complete details of user)</span>
                   <em>
-(login)                  </em>
+(search)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -262,25 +262,25 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
-data.setCell(0, 2, 'Runner.TestRunner3')
-data.setCell(0, 3, 151363);
+data.setCell(0, 2, 'Runner.TestRunner')
+data.setCell(0, 3, 97901);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'login')
-data.setCell(1, 2, 'Runner.TestRunner')
-data.setCell(1, 3, 141037);
+data.setCell(1, 2, 'Runner.TestRunner1')
+data.setCell(1, 3, 43518);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'login')
 data.setCell(2, 2, 'Runner.TestRunner2')
-data.setCell(2, 3, 107269);
+data.setCell(2, 3, 29084);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'login')
-data.setCell(3, 2, 'Runner.TestRunner1')
-data.setCell(3, 3, 105471);
+data.setCell(3, 2, 'Runner.TestRunner3')
+data.setCell(3, 3, 27300);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 minutes</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -313,56 +313,56 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login(Test Orangehrm login scenario)</span>
-                <span class="method-start">1809 ms</span>
+                <span class="method-start">1503 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">143014 ms</span>
+                <span class="method-start">99462 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Runner.TestRunner1</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUP</span>
-                <span class="method-start">143453 ms</span>
+                <span class="method-start">99593 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">login(check the user details)</span>
-                <span class="method-start">144762 ms</span>
+                <span class="method-name">login(check the system user details)</span>
+                <span class="method-start">99741 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">250290 ms</span>
+                <span class="method-start">143263 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Runner.TestRunner2</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUP</span>
-                <span class="method-start">250531 ms</span>
+                <span class="method-start">143290 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">login(check the user details)</span>
-                <span class="method-start">250914 ms</span>
+                <span class="method-name">login(check the  complete details of user)</span>
+                <span class="method-start">143339 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">358289 ms</span>
+                <span class="method-start">172428 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Runner.TestRunner3</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUP</span>
-                <span class="method-start">358459 ms</span>
+                <span class="method-start">172779 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">login(check the user details)</span>
-                <span class="method-start">358826 ms</span>
+                <span class="method-name">login(To assign leave to an employee)</span>
+                <span class="method-start">172826 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">510201 ms</span>
+                <span class="method-start">200132 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
